Fixing grid responsiveness #3

--- a/index.html
+++ b/index.html
@@ -33,9 +33,24 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/seablue.jpg" rel="preload" as="image" type="image/jpg">
-    <link href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/fishclouds.jpg" rel="preload" as="image" type="image/jpg" />
-    <link href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/purplewithcorn.jpg" rel="preload" as="image" type="image/jpg" />
+    <link
+      href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/seablue.jpg"
+      rel="preload"
+      as="image"
+      type="image/jpg"
+    />
+    <link
+      href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/fishclouds.jpg"
+      rel="preload"
+      as="image"
+      type="image/jpg"
+    />
+    <link
+      href="https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/purplewithcorn.jpg"
+      rel="preload"
+      as="image"
+      type="image/jpg"
+    />
     <link href="css/custom.css" rel="stylesheet" />
     <style>
       #home {
@@ -49,11 +64,10 @@
         background-image: url("https://raw.githubusercontent.com/moordee/freecix/refs/heads/main/fishclouds.jpg");
       }
       .fix-gap {
-        margin-top:0%;
-        margin-bottom:0%;
+        margin-top: 0%;
+        margin-bottom: 0%;
         margin-left: 0%;
         margin-right: 0%;
-
       }
     </style>
   </head>
@@ -63,7 +77,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <div class="text-center text-white fs-1 fw-bold ">Welcome to Freecix</div>
+            <div class="text-center text-white fs-1 fw-bold">
+              Welcome to Freecix
+            </div>
             <p class="hero-subtitle text-center text-primary">
               You are in the right place to find free courses you need.
             </p>
@@ -180,7 +196,11 @@
                       placeholder="Course title, description, link, etc."
                     ></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary w-100" id="submitContributor">
+                  <button
+                    type="submit"
+                    class="btn btn-primary w-100"
+                    id="submitContributor"
+                  >
                     <a href="html/sent.html">Send</a>
                   </button>
                 </form>
@@ -331,8 +351,12 @@
                       placeholder="Tell us your thoughts..."
                     ></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary w-100" id="submitFeedback">
-                    <a href="html/sent.html">Send Feedback</a> 
+                  <button
+                    type="submit"
+                    class="btn btn-primary w-100"
+                    id="submitFeedback"
+                  >
+                    <a href="html/sent.html">Send Feedback</a>
                   </button>
                 </form>
               </div>
@@ -356,9 +380,24 @@
         </p>
         <p class="mb-4 text-center"><strong>Take action today:</strong></p>
         <ul class="text-center">
-          <li><a class="btn btn-tertiary" href="html/oops.html">Share with Friends</a></li><br />
-          <li><a class="btn btn-tertiary" href="index.html#contributor-section">Become a Contributor</a></li><br />
-          <li><a class="btn btn-tertiary" href="index.html#feedback-section">Send a Feedback</a></li><br />
+          <li>
+            <a class="btn btn-tertiary" href="html/oops.html"
+              >Share with Friends</a
+            >
+          </li>
+          <br />
+          <li>
+            <a class="btn btn-tertiary" href="index.html#contributor-section"
+              >Become a Contributor</a
+            >
+          </li>
+          <br />
+          <li>
+            <a class="btn btn-tertiary" href="index.html#feedback-section"
+              >Send a Feedback</a
+            >
+          </li>
+          <br />
           <li><a class="btn btn-tertiary" href="html/oops.html">Donate</a></li>
         </ul>
         <p class="mt-4">
@@ -372,55 +411,69 @@
     </section>
 
     <!-- Footer -->
-    <div
-      class="row justify-content-center text-white bg-primary-dark justify-content-center mt-0 my-0 p-3"
+    <footer
+      class="justify-content-center text-white bg-primary-dark mt-0 my-0 p-3"
     >
-      <div class="col-sm-2">
-        <ul id="l1" class="text-white">
-          <h5>Menu</h5>
-          <li><a href="index.html#home">Home</a></li>
-          <li><a href="html/articles-main.html">Articles</a></li>
-          <li><a href="index.html#contributor-section">Contribute</a></li>
-          <li><a href="index.html#updates-section">Updates</a></li>
-        </ul>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-2">
+            <ul id="l1" class="text-white">
+              <h5>Menu</h5>
+              <li><a href="index.html#home">Home</a></li>
+              <li><a href="html/articles-main.html">Articles</a></li>
+              <li><a href="index.html#contributor-section">Contribute</a></li>
+              <li><a href="index.html#updates-section">Updates</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-2">
+            <ul class="text-white">
+              <li><h5>Courses</h5></li>
+              <li><a href="html/courses.html#en">in English</a></li>
+              <li><a href="html/courses.html#id">in Bahasa Indonesia</a></li>
+              <li><a href="html/courses.html">Mata Pelajaran</a></li>
+              <li>
+                <a href="index.html#contributor-section"
+                  >Submit Course in Your Language</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-3">
+            <ul class="text-white">
+              <li><h5>Support Us</h5></li>
+              <li><a href="index.html#sharing">Donate</a></li>
+              <li>
+                <a href="index.html#sharing">Share This Site with Friends</a>
+              </li>
+              <li>
+                <a href="index.html#contributor-section"
+                  >Become a Contributor</a
+                >
+              </li>
+              <li>
+                <a href="index.html#feedback-section">Share your Feedback</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-3">
+            <ul>
+              <li><h5>For Sponsors</h5></li>
+              <li><a href="html/oops.html">Advertise in This Site</a></li>
+              <li><a href="html/oops.html">Start a Collaboration</a></li>
+            </ul>
+          </div>
+          <div class="col-sm-2">
+            <ul>
+              <li><h5>Contact Us</h5></li>
+              <li><a href="html/oops.html">Email</a></li>
+            </ul>
+          </div>
+          <p class="text-center mt-3">
+            &copy; Freecix Team. This is a prototype page, don't expect
+            everything to work properly.
+          </p>
+        </div>
       </div>
-      <div class="col-sm-2">
-        <ul class="text-white">
-          <li><h5>Courses</h5></li>
-          <li><a href="html/courses.html#en">in English</a></li>
-          <li><a href="html/courses.html#id">in Bahasa Indonesia</a></li>
-          <li><a href="html/courses.html">Mata Pelajaran</a></li>
-          <li>
-            <a href="index.html#contributor-section">Submit Course in Your Language</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-3">
-        <ul class="text-white">
-          <li><h5>Support Us</h5></li>
-          <li><a href="index.html#sharing">Donate</a></li>
-          <li><a href="index.html#sharing">Share This Site with Friends</a></li>
-          <li><a href="index.html#contributor-section">Become a Contributor</a></li>
-          <li><a href="index.html#feedback-section">Share your Feedback</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-3">
-        <ul>
-          <li><h5>For Sponsors</h5></li>
-          <li><a href="html/oops.html">Advertise in This Site</a></li>
-          <li><a href="html/oops.html">Start a Collaboration</a></li>
-        </ul>
-      </div>
-      <div class="col-sm-2">
-        <ul>
-          <li></li><h5>Contact Us</h5></li>
-          <li><a href="html/oops.html">Email</a></li>
-        </ul>
-      </div>
-      <p class="text-center mt-3">
-        &copy; Freecix Team. This is a prototype page, don't expect everything
-        to work properly.
-      </p>
-    </div>
+    </footer>
   </body>
 </html>
