Fixing some buttons

--- a/index.html
+++ b/index.html
@@ -381,24 +381,24 @@
         <p class="mb-4 text-center"><strong>Take action today:</strong></p>
         <ul class="text-center">
           <li>
-            <a class="btn btn-tertiary" href="html/oops.html"
+            <button class="btn btn-tertiary"><a href="html/oops.html"
               >Share with Friends</a
-            >
+            ></button>
           </li>
           <br />
           <li>
-            <a class="btn btn-tertiary" href="index.html#contributor-section"
+            <button class="btn btn-tertiary"><a href="index.html#contributor-section">
               >Become a Contributor</a
-            >
+            ></button>
           </li>
           <br />
           <li>
-            <a class="btn btn-tertiary" href="index.html#feedback-section"
+            <button class="btn btn-tertiary"><a href="index.html#feedback-section">
               >Send a Feedback</a
-            >
+            ></button>
           </li>
           <br />
-          <li><a class="btn btn-tertiary" href="html/oops.html">Donate</a></li>
+          <li><button class="btn btn-tertiary"><a href="html/oops.html">Donate</a></button></li>
         </ul>
         <p class="mt-4">
           <small
