--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@
           <br />
           <li>
             <button class="btn btn-tertiary"><a href="index.html#contributor-section">
-              >Become a Contributor</a
+              Become a Contributor</a
             ></button>
           </li>
           <br />
           <li>
             <button class="btn btn-tertiary"><a href="index.html#feedback-section">
-              >Send a Feedback</a
+              Send a Feedback</a
             ></button>
           </li>
           <br />
