Fixing pics that overflows over maximum viewport width

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400&h=200&fit=crop"
                 alt="laptop and a cup"
                 class="feature-icon fix-gap"
-                style="max-width: 100vw;"
+                style="max-width: 100vw; min-width: 50%;"
               />
               <h3>Courses</h3>
               <p class="text-white">
@@ -131,7 +131,7 @@
                 src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?w=400&h=200&fit=crop"
                 alt="a bunch of papers and an eyeglass"
                 class="feature-icon"
-                style="max-width: 100vw;"
+                style="max-width: 100vw; min-width: 50%;"
               />
               <h3>Articles</h3>
               <p class="text-white">
