--- a/index.html
+++ b/index.html
@@ -108,39 +108,43 @@
       <div class="container">
         <div class="row g-4">
           <div class="col-md-6">
-            <div class="feature-card">
-              <img
-                src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400&h=200&fit=crop"
-                alt="laptop and a cup"
-                class="feature-icon fix-gap"
-                style="max-width: 100vw; min-width: 50%;"
-              />
-              <h3>Courses</h3>
-              <p class="text-white">
-                Discover thousands of free educational courses across various
-                subjects and skill levels.
-              </p>
-              <a href="html/courses.html" class="btn btn-secondary"
-                >Explore Courses</a
-              >
+            <div class="card border-0 shadow h-100">
+              <div class="card-body d-flex flex-column">
+                <img
+                  src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400&h=200&fit=crop"
+                  alt="laptop and a cup"
+                  class="card-img-top"
+                  style="object-fit: cover; height: 200px;"
+                />
+                <h3 class="card-title mt-3">Courses</h3>
+                <p class="card-text text-white flex-grow-1">
+                  Discover thousands of free educational courses across various
+                  subjects and skill levels.
+                </p>
+                <a href="html/courses.html" class="btn btn-secondary align-self-start"
+                  >Explore Courses</a
+                >
+              </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="feature-card">
+            <div class="card border-0 shadow h-100">
+              <div class="card-body d-flex flex-column">
               <img
                 src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?w=400&h=200&fit=crop"
                 alt="a bunch of papers and an eyeglass"
-                class="feature-icon"
-                style="max-width: 100vw; min-width: 50%;"
+                class="card-img-top"
+                style="object-fit: cover; height: 200px;"
               />
-              <h3>Articles</h3>
-              <p class="text-white">
+              <h3 class="card-title mt-3">Articles</h3>
+              <p class="card-text text-white flex-grow-1">
                 Read insightful articles and educational content to enhance your
                 learning journey.
               </p>
-              <a href="html/articles-main.html" class="btn btn-primary"
+              <a href="html/articles-main.html" class="btn btn-primary align-self-start"
                 >Read Articles</a
               >
+              </div>
             </div>
           </div>
         </div>
