--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="container">
         <div class="row g-4">
           <div class="col-md-6">
-            <div class="card border-0 shadow h-100">
+            <div class="card border-0 shadow h-100 bg-primary">
               <div class="card-body d-flex flex-column">
                 <img
                   src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400&h=200&fit=crop"
@@ -128,7 +128,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="card border-0 shadow h-100">
+            <div class="card border-0 shadow h-100 bg-primary">
               <div class="card-body d-flex flex-column">
               <img
                 src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?w=400&h=200&fit=crop"
