Fixed minor color mismatch

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   Discover thousands of free educational courses across various
                   subjects and skill levels.
                 </p>
-                <a href="html/courses.html" class="btn btn-secondary align-self-start"
+                <a href="html/courses.html" class="btn btn-primary align-self-start"
                   >Explore Courses</a
                 >
               </div>
