Added id & ru pages, fixed some bugs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="img/favicon/favicon_plain_round.png"
+      href="img/favicon/favicon_light_round.png"
     />
     <style>
       #home {
@@ -201,6 +201,20 @@
                     </div>
                   </div>
                 </li>
+                <li class="p-1 mb-1">
+                  <div class="card text-white bg-primary">
+                    <div class="card-body">
+                      <a class="link-white-magenta" href="landing-ru.html"
+                        ><img
+                          class="icon-sm mx-2"
+                          src="img/country_icon/russian-federation-48.png"
+                          alt="https://icons8.com/icon/dHLUcDM_MwLT/russian-federation"
+                        />
+                        Русский</a
+                      >
+                    </div>
+                  </div>
+                </li>
               </ul>
             </div>
           </div>
@@ -262,7 +276,9 @@
         style="background-image: url('img/blueFuller_bg.png')"
       ></div>
       <div class="container">
-        <h2 class="fw-bold text-center mt-3 mb-3 text-content">What we plan to cover:</h2>
+        <h2 class="fw-bold text-center mt-3 mb-3 text-content">
+          What we plan to cover:
+        </h2>
         <div class="row row-cols-md-3 mt-5">
           <div class="col">
             <div class="card border-light bg-primary">
@@ -316,9 +332,9 @@
               Build a library of online courses, videos, and study materials for
               everyone.<br />
               <strong>Make Learning Easy</strong><br />
-              Share tips and -resources to simplify studying.<br />
+              Share tips and resources to simplify studying.<br />
               <strong>Connect & Collaborate</strong><br />
-              Join a community of students and self-learners.<br />
+              Build a community of students and self-learners.<br />
               <strong>Have Fun Learning</strong><br />
               Engage, explore, and make studying more enjoyable.
             </p>
@@ -345,7 +361,9 @@
       <div class="container">
         <div class="row row row-cols-1 row-cols-sm-2 row-cols-md-2">
           <div class="col">
-            <h2 class="fw-bold text-start my-3 pt-2 text-content">Become a Contributor</h2>
+            <h2 class="fw-bold text-start my-3 pt-2 text-content">
+              Become a Contributor
+            </h2>
             <p class="w-normal fs-4 justify-content-md-center p-3 text-content">
               Freecix is at the beginning of its journey, and you can help
               create a space where learning becomes easier for everyone. By
@@ -369,6 +387,7 @@
                       name="entry.1836001410"
                       id="nameInput"
                       placeholder="doesn't have to be real name"
+                      autocomplete="given-name"
                       required
                     />
                   </div>
@@ -380,6 +399,7 @@
                       name="entry.1296502657"
                       id="countryInput"
                       placeholder="country you're currently in"
+                      autocomplete="country"
                       required
                     />
                   </div>
@@ -391,6 +411,7 @@
                       name="entry.1845679844"
                       id="emailInput"
                       placeholder="example@mail.com"
+                      autocomplete="email"
                       required
                     />
                   </div>
