--- a/landing-ru.html
+++ b/landing-ru.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id" class="overflow-x-hidden">
+<html lang="en" class="overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +12,7 @@
       content="Free Courses, Psychology, English, Arabic, Russian, science articles, fun facts, activities, freecix, Free Courses, Psychology, English, Arabic, Russian, science articles, fun facts, activities, freecix, Freecix offers free online courses, free study resources, free video lessons, and downloadable study materials. Explore online learning free, self-learning resources, free educational content, and free e-learning opportunities. Take advantage of student study tools, online classes free, free academic resources, and a free learning platform. Browse our free course directory, free tutorials online, free online lessons, free study guides, and free educational videos. Access online courses no charge, 100% free courses, free study website, and free learning resources. Dive into free online modules, free skill-building courses, free educational PDFs, and free open learning. Experience community-driven learning on our collaborative learning platform with free exam prep resources, free subject lessons, and student-friendly free courses. Participate in free online training, free course listings, learn online free, and use free self-study materials. Explore our free knowledge base, free course hub, free online tutorials, free learning guides, and online study resources free. Discover free personal development courses, free video tutorials, open-access online courses, and our free education platform. Join free online workshops, free learning network, free study community, online education resources free, free course collections, free learning library, and start studying free."
     />
     <meta name="author" content="Free Courses Index team" />
-    <title>Freecix: Halaman Landing (Bahasa Indonesia)</title>
+    <title>Freecix: Главная страница</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -94,7 +94,7 @@
       >
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasExampleLabel">
-            Temukan kami di:
+            Узнайте больше:
           </h5>
           <button
             type="button"
@@ -114,8 +114,8 @@
                       href="https://github.com/moordee/freecix"
                       target="_blank"
                       ><img class="icon mx-2" src="img/githubLogo.png" />
-                      Repositori GitHub
-                    </a>
+                      Репозиторий GitHub</a
+                    >
                   </div>
                 </div>
               </li>
@@ -127,7 +127,7 @@
                       href="https://landing-freecix.onrender.com"
                       target="_blank"
                       ><img class="icon mx-2" src="img/renderLogo.jpg" />
-                      Halaman Landing</a
+                      Главная страница</a
                     >
                   </div>
                 </div>
@@ -144,7 +144,7 @@
                         src="img/icons8-email-100.png"
                         alt="https://icons8.com/icon/12580/email"
                       />
-                      Kirim Email</a
+                      Отправить email</a
                     >
                   </div>
                 </div>
@@ -161,7 +161,7 @@
       >
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasExampleLabel">
-            Pilih bahasa:
+            Выберите язык:
           </h5>
           <button
             type="button"
@@ -229,15 +229,15 @@
       ></div>
       <div class="container text-content">
         <h1 class="fw-bold fs-1">
-          Anda Suka Sumber Belajar & Kursus<br />yang Benar-benar<br />
-          Gratis?
+          Вам нравятся учебные ресурсы,<br />
+          которые полностью<br />бесплатные? Нам тоже.
         </h1>
-        <p class="fs-4 fw-normal mt-2">Kami juga.</p>
+        <p class="fs-4 fw-normal mt-2">So are we.</p>
         <a
           href="index.html#Contributor"
           class="btn btn-secondary-solid mt-2 fs-5 fw-normal"
           style="text-decoration: none"
-          >Mari kumpulkan bersama</a
+          >Давайте объединим усилия</a
         >
       </div>
     </section>
@@ -247,18 +247,14 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2">
           <div class="col">
             <p class="fw-normal fs-4 justify-content-md-center p-3">
-              Freecix adalah sebuah laman sumber belajar online di mana siswa,
-              <i>self-learners</i>, dan siapapun yang ingin tahu bisa menemukan
-              sebuah daftar panjang berisi kursus online, video pembelajaran,
-              dan materi belajar yang bisa di unduh - dan semuanya gratis. Kami
-              membuat semuanya menjadi lebih simpel: tidak perlu menebak kalau
-              kursus ini atau itu sekedar percobaan gratis
-              <i>(free-trial)</i>
-              atau benar-benar gratis. Pilih saja apa yang menurut Anda menarik
-              dan mulai belajar. Komunitas kami akan membantu satu sama lain
-              membuat daftar ini menjadi lebih lengkap, membuat belajar jadi
-              lebih mudah bagi semua orang. Bahkan Anda juga bisa bergabung,
-              lho!
+              Freecix — это веб-сайт с учебными материалами, где студенты,
+              самостоятельные учащиеся и все интересующиеся могут найти обширный
+              список онлайн-курсов, видеоуроков и загружаемых учебных материалов
+              — и всё это совершенно бесплатно. Мы сделали всё просто: не нужно
+              гадать, пробная это версия или полностью бесплатная. Просто
+              выберите то, что вас интересует, и начните учиться. Наше
+              сообщество помогает друг другу расширять список, делая обучение
+              проще для всех. Кстати, вы тоже можете присоединиться!
             </p>
           </div>
           <div class="col storyset-center-xy">
@@ -282,7 +278,7 @@
       ></div>
       <div class="container">
         <h2 class="fw-bold text-center mt-3 mb-3 text-content">
-          Rencananya, ini yang ingin kami muat:
+          Что мы планируем охватить:
         </h2>
         <div class="row row-cols-md-3 mt-5">
           <div class="col">
@@ -293,7 +289,10 @@
                 alt="Image by Tumisu from Pixabay"
               />
               <div class="card-body">
-                <h4 class="card-title fw-bold fs-3">Kursus<br />Online</h4>
+                <h4 class="card-title fw-bold fs-3">
+                  Онлайн<br />
+                  Курсы
+                </h4>
               </div>
             </div>
           </div>
@@ -306,7 +305,7 @@
               />
               <div class="card-body">
                 <h4 class="card-title fw-bold fs-3">
-                  Dokumen<br />Materi<br />Belajar
+                  Учебные<br />Ресурсные<br />Документы
                 </h4>
               </div>
             </div>
@@ -319,7 +318,7 @@
                 alt="Image by Claudia Dewald on Pixabay"
               />
               <div class="card-body">
-                <h4 class="card-title fw-bold fs-3">Video<br />Pembelajaran</h4>
+                <h4 class="card-title fw-bold fs-3">Видео<br />Уроки</h4>
               </div>
             </div>
           </div>
@@ -331,21 +330,19 @@
       <div class="container">
         <div class="row row row-cols-1 row-cols-sm-2">
           <div class="col">
-            <h2 class="fw-bold text-start mt-3 mb-3">Visi kami:</h2>
+            <h2 class="fw-bold text-start mt-3 mb-3">Видение:</h2>
             <p class="fw-normal fs-4 justify-content-md-center p-3">
-              <strong>Mengumpulkan Sumber-sumber Belajar Gratis</strong><br />
-              Membangun sebuah perpustakaan daring berisi kursus online, video
-              pembelajaran, dan materi belajar untuk semua orang.<br />
-              <strong>Membuat Belajar Menjadi Mudah</strong><br />
-              Membagikan tips dan sumber-sumber untuk membuat proses belajar
-              menjadi lebih simpel.<br />
-              <strong>Menghubungkan dan Berkolaborasi</strong><br />
-              Join a community of students and self-learners. Membangun sebuah
-              komunitas untuk siswa dan <i>self-learners</i> untuk saling
-              mengenal dan berkolaborasi<br />
-              <strong>Belajar Dengan Ceria</strong><br />
-              Mulai berinteraksi, jelajahi, dan buat belajar menjadi lebih bisa
-              dinikmati.
+              <strong>Бесплатные ресурсы</strong><br />
+              Создать библиотеку онлайн-курсов, видео и учебных материалов для
+              всех.
+              <br />
+              <strong>Упростить обучение</strong><br />
+              Делиться советами и ресурсами для упрощения учёбы.
+              <br />
+              <strong>Объединяться и сотрудничать</strong><br />
+              Создать сообщество студентов и самостоятельных учащихся.<br />
+              <strong>Учиться с удовольствием</strong><br />
+              Вовлекать, исследовать и делать обучение более увлекательным.
             </p>
           </div>
           <div class="col storyset-center-xy">
@@ -371,18 +368,17 @@
         <div class="row row row-cols-1 row-cols-sm-2 row-cols-md-2">
           <div class="col">
             <h2 class="fw-bold text-start my-3 pt-2 text-content">
-              Bergabung sebagai Kontributor
+              Станьте Участником
             </h2>
             <p class="w-normal fs-4 justify-content-md-center p-3 text-content">
-              Freecix sedang ada di awal perjalanannya, dan Anda bisa membantu
-              membangun ruang dimana belajar menjadi lebih mudah bagi semua
-              orang. Dengan kontribusi Anda dengan membagikan sumber-sumber
-              favorit, Anda membantu orang lain belajar. Anda juga akan
-              menemukan materi baru, memperkuat kemampuan, dan menjadi bagian
-              dari sebuah komunitas yang dibangun atas dasar rasa ingin tahu dan
-              kemurahan hati. Jika Anda percaya pada pendidikan yang dapat
-              diakses dan ingin membuat perbedaan, kami akan menerima Anda
-              dengan senang hati sembari kita membangun Freecix bersama.
+              Freecix только начинает свой путь, и вы можете помочь создать
+              пространство, где обучение становится проще для всех. Внося свои
+              любимые ресурсы, вы помогаете другим учиться, исследовать и расти.
+              Вы также откроете для себя новые материалы, укрепите собственные
+              навыки и станете частью сообщества, построенного на любопытстве и
+              щедрости. Если вы верите в доступное образование и хотите изменить
+              ситуацию, мы будем рады видеть вас в нашей команде по созданию
+              Freecix.
             </p>
           </div>
           <div class="col">
@@ -390,25 +386,25 @@
               <div class="card-body">
                 <form id="become-contributor">
                   <div class="mb-3">
-                    <label for="name" class="form-label">Nama</label>
+                    <label for="name" class="form-label">Имя</label>
                     <input
                       type="text"
                       class="form-control"
                       name="entry.1836001410"
                       id="nameInput"
-                      placeholder="tidak harus nama legal, kok :)"
+                      placeholder="doesn't have to be real name"
                       autocomplete="given-name"
                       required
                     />
                   </div>
                   <div class="mb-3">
-                    <label for="country" class="form-label">Negara Asal</label>
+                    <label for="country" class="form-label">Страна</label>
                     <input
                       type="text"
                       class="form-control"
                       name="entry.1296502657"
                       id="countryInput"
-                      placeholder="negara dimana Anda sedang berada"
+                      placeholder="country you're currently in"
                       autocomplete="country"
                       required
                     />
@@ -420,28 +416,28 @@
                       class="form-control"
                       name="entry.1845679844"
                       id="emailInput"
-                      placeholder="contoh@surel.com"
+                      placeholder="example@mail.com"
                       autocomplete="email"
                       required
                     />
                   </div>
                   <div class="mb-3">
                     <label for="contributor-reason" class="form-label"
-                      >Jelaskan bagaimana anda ingin berkontribusi:</label
+                      >Какой тип вклада вы хотели бы внести?</label
                     >
                     <textarea
                       class="form-control"
                       name="entry.1901707206"
                       id="typeInput"
                       rows="3"
-                      placeholder="contoh: Saya ingin menjadi beta tester agar tidak ada terlalu banyak bug saat laman ini resmi diluncurkan."
+                      placeholder="example: I want to help expand the index by adding free courses and study resources that I already know, but haven't been listed here yet."
                       required
                     ></textarea>
                   </div>
                   <div class="d-grid gap-2">
                     <div class="mb-3">
                       <label for="select" name="platform" class="form-label"
-                        >Platform mana yang lebih nyaman bagi Anda?</label
+                        >Какая платформа вам удобнее?</label
                       >
                       <select
                         class="form-select"
@@ -449,13 +445,13 @@
                         name="entry.680028269"
                         id="formSelect"
                       >
-                        <option selected>Pilih salah satu</option>
+                        <option selected>Выберите одну</option>
                         <option value="Telegram">Telegram</option>
                         <option value="Discord">Discord</option>
                       </select>
                     </div>
                     <button id="submit" type="submit" class="btn btn-secondary">
-                      Kirim
+                      Отправить
                     </button>
                   </div>
                 </form>
@@ -467,9 +463,7 @@
     </section>
 
     <section class="section-primary">
-      <h2 class="fw-bold text-center mt-3 mb-3">
-        Pertanyaan-pertanyaan yang Sering Ditanyakan
-      </h2>
+      <h2 class="fw-bold text-center mt-3 mb-3">Часто задаваемые вопросы</h2>
       <div class="container mt-3">
         <div class="accordion accordion-dark-solid" id="accordionExample">
           <div class="accordion-item">
@@ -482,7 +476,7 @@
                 aria-expanded="false"
                 aria-controls="collapseOne"
               >
-                Memangnya Freecix itu apa, sih?
+                Что такое Freecix?
               </button>
             </h2>
             <div
@@ -491,13 +485,10 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                Freecix adalah akronim dari Free Courses Index. We aim to index
-                free study resources and remove the hassle of guessing
-                what-type-of-free trial & error for learners. Tujuan kamid
-                adalah untuk membuat index berisi sumber-sumber belajar gratis
-                dan menghapus sulitnya proses menebak
-                ini-gratis-apa-gratis-beneran, yang membutuhkan banyak sekali
-                percobaan <i>(trial and error)</i>
+                Freecix — это индекс бесплатных курсов. Мы стремимся
+                систематизировать бесплатные учебные ресурсы и избавить учащихся
+                от необходимости угадывать, какие бесплатные пробные версии
+                доступны.
               </div>
             </div>
           </div>
@@ -515,7 +506,7 @@
                 aria-expanded="false"
                 aria-controls="collapseTwo"
               >
-                Kapan index ini akan resmi diluncurkan?
+                Когда этот индекс будет готов к запуску
               </button>
             </h2>
             <div
@@ -524,8 +515,8 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                Sekitar awal 2026, antara Januari sampai Juni. Bisa lebih cepat
-                kalau Anda bergabung sebagai Kontributor, lho :D
+                Примерно в начале 2026 года, где-то между январём и июнем. Хотя
+                с вашей помощью участников это может произойти быстрее!
               </div>
             </div>
           </div>
@@ -570,8 +561,8 @@
           })
             .then(() => {
               Swal.fire({
-                title: "Terima kasih!",
-                text: "Kami akan menghubungi Anda dan mengirim formulir kontribusi yang lengkap berdasarkan penjelasan yang Anda berikan dalam 2-4 hari.",
+                title: "Thank you",
+                text: "В течение 2–4 дней мы пришлём вам подходящую форму для участия, исходя из ваших предпочтений",
                 icon: "success",
                 theme: "dark",
               });
@@ -579,7 +570,7 @@
             })
             .catch((err) => {
               alert(
-                "Ada sesuatu yang salah. Pastikan Anda sudah mengisi formulir secara lengkap dan perangkat Anda tersambung ke internet." +
+                "Что-то пошло не так. Проверьте, полностью ли заполнена форма, и убедитесь в стабильности интернет-соединения" +
                   err
               );
             });
@@ -600,9 +591,16 @@
         <p class="text-center mt-3">
           &copy;2025 Freecix Team.
           <a class="link-white-magenta" href="mailto:freecix@proton.me"
-            >Hubungi kami di sini.</a
+            >Связаться с нами здесь.</a
           >
         </p>
+        <br />
+        <p class="text-center">
+          <a class="link-white-magenta" href="https://alice.yandex.ru/chat/"
+            >Переведено с помощью ИИ Алисы от Яндекса</a
+          >
+        </p>
+        <br />
       </div>
     </footer>
   </body>
