Fixed ru page placeholder texts

--- a/landing-ru.html
+++ b/landing-ru.html
@@ -392,7 +392,7 @@
                       class="form-control"
                       name="entry.1836001410"
                       id="nameInput"
-                      placeholder="doesn't have to be real name"
+                      placeholder="не обязательно указывать настоящее имя"
                       autocomplete="given-name"
                       required
                     />
@@ -404,7 +404,7 @@
                       class="form-control"
                       name="entry.1296502657"
                       id="countryInput"
-                      placeholder="country you're currently in"
+                      placeholder="страна, в которой вы сейчас находитесь"
                       autocomplete="country"
                       required
                     />
@@ -430,7 +430,7 @@
                       name="entry.1901707206"
                       id="typeInput"
                       rows="3"
-                      placeholder="example: I want to help expand the index by adding free courses and study resources that I already know, but haven't been listed here yet."
+                      placeholder="example: Я хочу помочь расширить каталог, добавив бесплатные курсы и учебные ресурсы, о которых я уже знаю, но которые ещё не были добавлены сюда."
                       required
                     ></textarea>
                   </div>
