--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
       as="image"
       type="image/jpg"
     />
+    <link
+      href="img/blueFuller_bg.png"
+      rel="preload"
+      as="image"
+      type="image/png"
+    />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="css/custom.css" rel="stylesheet" />
     <link
@@ -61,7 +67,7 @@
   <body>
     <header>
       <nav
-        class="navbar navbar-expand-sm navbar-light bg-primary sticky-top d-flex align-items-center px-3"
+        class="navbar navbar-expand-sm navbar-light bg-primary d-flex align-items-center px-3"
       >
         <a
           data-bs-toggle="offcanvas"
