--- a/landing-ru.html
+++ b/landing-ru.html
@@ -39,6 +39,12 @@
       as="image"
       type="image/jpg"
     />
+    <link
+      href="img/blueFuller_bg.png"
+      rel="preload"
+      as="image"
+      type="image/png"
+    />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link href="css/custom.css" rel="stylesheet" />
     <link
