--- a/landing-ru.html
+++ b/landing-ru.html
@@ -236,9 +236,9 @@
       <div class="container text-content">
         <h1 class="fw-bold fs-1">
           Вам нравятся учебные ресурсы,<br />
-          которые полностью<br />бесплатные? Нам тоже.
+          которые полностью<br />бесплатные?
         </h1>
-        <p class="fs-4 fw-normal mt-2">So are we.</p>
+        <p class="fs-4 fw-normal mt-2">Нам тоже.</p>
         <a
           href="index.html#Contributor"
           class="btn btn-secondary-solid mt-2 fs-5 fw-normal"
@@ -593,16 +593,15 @@
     <footer
       class="justify-content-center text-white bg-primary-dark mt-0 my-0 p-3"
     >
-      <div class="container">
+      <div class="container mb-1">
         <p class="text-center mt-3">
           &copy;2025 Freecix Team.
           <a class="link-white-magenta" href="mailto:freecix@proton.me"
             >Связаться с нами здесь.</a
           >
         </p>
-        <br />
         <p class="text-center">
-          <a class="link-white-magenta" href="https://alice.yandex.ru/chat/"
+          <a class="link-white-magenta" href="https://alice.yandex.ru/"
             >Переведено с помощью ИИ Алисы от Яндекса</a
           >
         </p>
